--- a/index.html
+++ b/index.html
@@ -3,122 +3,192 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>machine's job</title>
+    <title>Sabit Murzaliev</title>
     <style>
         body {
+            font-family: 'Courier New', monospace;
+            background-color: #2b2b2b;
+            color: #abb2bf;
             margin: 0;
-            overflow: hidden;
-            background-color: #000;
+            padding: 0;
+            font-size: 14pt;
         }
 
-        canvas {
-            display: block;
-        }
-
-        #overlay {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: rgba(0, 0, 0, 0.8);
-            padding: 20px;
+        header {
+            background-color: #2b2b2b;
+            color: #61afef;
+            padding: 10px 0;
             text-align: center;
-            border-radius: 10px;
-            display: none;
-            animation: fadeIn 1s ease-out, pulse 2s 2s infinite;
-            border: 1px solid #ff0000;
         }
 
-        #overlay p {
-            color: #0F0;
+        nav ul {
+            list-style-type: none;
             margin: 0;
-            font-size: 2em;
-            font-family: 'Arial', sans-serif;
+            padding: 0;
         }
 
-        #overlay a {
-            color: #0F0;
+        nav ul li {
+            display: inline;
+            margin-right: 20px;
+        }
+
+        nav ul li a {
+            color: #61afef;
             text-decoration: none;
+            font-weight: bold;
         }
 
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
+        main {
+            padding: 20px;
         }
 
-        @keyframes pulse {
-            0% {
-                opacity: 1;
-            }
-            50% {
-                opacity: 0.5;
-            }
-            100% {
-                opacity: 1;
-            }
+        section {
+            margin-bottom: 20px;
+        }
+
+        footer {
+            background-color: #2b2b2b;
+            color: #abb2bf;
+            text-align: center;
+            padding: 10px 0;
+        }
+
+        h1, h2, h3, h4, h5, h6 {
+            color: #e5c07b;
+        }
+
+        hr {
+            border-color: #4b5263;
+        }
+
+        ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        li {
+            margin-bottom: 10px;
+        }
+
+        a {
+            text-decoration: none;
+            color: #abb2bf;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
-    <canvas id="matrix-canvas"></canvas>
-    <div id="overlay">
-        <p><a href="https://t.me/sab1tm" target="_blank">t.me/sab1tm</a></p>
-    </div>
+    <header>
+        <h1>Sabit Murzaliev</h1>
+    </header>
 
-    <script>
-        const canvas = document.getElementById("matrix-canvas");
-        const ctx = canvas.getContext("2d");
+    <main>
+        <section id="cv">
+            <p>
+                Location: <strong>Astana, Kazakhstan</strong> <br>
+                Phone: <a href="tel:+77771271818">+7 (777) 127 18 18</a> <br>
+                Email: <a href="mailto:sabit.murzaliev@gmail.com">sabit.murzaliev@gmail.com</a> <br>
+                LinkedIn: <a href="https://www.linkedin.com/in/sab1tm">linkedin.com/in/sab1tm</a> <br>
+                Telegram: <a href="https://t.me/sab1tm">t.me/sab1tm</a>
+            </p>
+            <hr>
+            <h3>Education</h3>
+            <p>
+                Kazakh-Russian University <br>
+                Bachelor of Arts in Computer Science <br>
+                Aug. 2002 -- May 2007
+            </p>
+            <hr>
+            <h3>Experience</h3>
+            <p>
+                <strong>August 2023 -- Present</strong> <br>
+                Java Back-end developer <br>
+                KKS-DIGITAL, LLC <br>
+                Astana, KZ <br>
+                Designed and developed a flexible system for automating business processes in the utilities sector. Implemented a flexible mechanism for routing business documents, ensuring efficient and dynamic processing of requests. Accelerated the decision-making process in favor of the end consumer. <br>
+                Languages and technologies: Java 11-17 / Spring Boot, Spring Cloud / JUnit / Mockito / Hibernate / PostgreSQL / Kafka / Elasticsearch / Redis / Feign Client / gRPC / Keycloak / Maven / Flyway / Jasper Reports / GitLab CI/CD / Docker / Nexus / Sonarqube
+            </p>
 
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
+            <p>
+                <strong>November 2021 – August 2023</strong> <br>
+                Java Back-end developer <br>
+                IT-holding KAZDREAM <br>
+                Astana, KZ <br>
+                Designed and developed a customized document flow system for inter-agency communication in the government
+                sector. Implemented a flexible document routing mechanism to allow for efficient and dynamic handling of
+                documents among multiple agencies. <br>
+                Utilized modern web development technologies to create a robust and user-friendly system for document exchange
+                and tracking. Implemented secure authentication and authorization mechanisms to ensure data privacy and
+                integrity. <br>
+                Languages and technologies: : Java 11 / Spring Framework (Boot, Security, Cloud, RestDocs) / JUnit / Mockito /
+                Hibernate / PostgreSQL / Apache Kafka / Elasticsearch / Redis / Feign Client / gRPC / oAuth2 / Maven /
+                Flyway / Jasper Reports / Jenkins / Docker (Compose) / Nexus / Sonarqube
+            </p>
+            <p>
+                <strong>May 2021 – November 2021</strong> <br>
+                Java Software Engineer <br>
+                Company ”NAT Kazakhstan” <br>
+                Astana, KZ <br>
+                Developed and maintained web applications to automate the organization’s business processes. <br>
+                Languages and technologies: Java 7-8 / Spring Framework (Boot, Security) / JUnit / Mockito / Hibernate / MySQL
+                / Feign Client / oAuth2 / Maven / Liquibase / Jasper Reports / Apache Tomcat
+            </p>
+            <p>
+                <strong>August 2019 – May 2021</strong> <br>
+                Java Software Engineer <br>
+                Company ”TALAP” <br>
+                Astana, KZ <br>
+                Deployment of several microservices of the same type in a cluster and development of a common reporting service. <br>
+                Languages and technologies: Java 8 / Spring Framework (Boot, Security) / JUnit / Mockito / Hibernate /
+                PostgreSQL / Feign Client / oAuth2 / Maven / Jasper Reports / Apache Tomcat
+            </p>
+            <p>
+                <strong>January 2019 – August 2021</strong> <br>
+                Software Engineer <br>
+                Company ”National Testing Center” <br>
+                Astana, KZ <br>
+                Developed and maintained web applications to automate the organization’s business processes. <br>
+                Languages and technologies: Java 8 / Spring Boot / Maven / Jasper Reports / Wildfly / JUnit / Hibernate / PostgreSQL / Mustache / HTML / CSS / JS
+            </p>
+            <p>
+                <strong>August 2012 – January 2019</strong> <br>
+                Head of Information Technology Department <br>
+                Company ”Kazakhmys Corp.” <br>
+                Astana, KZ <br>
+                IT department business process management. <br>
+                Department task planning. <br>
+                Project Execution Management. <br>
+                Solution of organizational issues. <br>
+            </p>
+            <p>
+                <strong>May 2007 – August 2012</strong> <br>
+                Lead Software Engineer <br>
+                Company ”Kazakhmys Corp.” <br>
+                Astana, KZ <br>
+                Development of corporate applications for the company ”Kazakhmys Corp”. <br>
+                Languages and technologies: Application for Desktop (Windows OS) / Delphi XE / MS SQL / Visual FoxPro
+            </p>
 
-        const matrixChars = "7gpanx3yrftzc1q92sm8eohd54bvli0k6";
-        const charsArray = matrixChars.split("");
+            <hr>
+            <h3>Technical Skills</h3>
+            <ul>
+                <li>Languages: Java, Kotlin, Python, SQL/NoSQL</li>
+                <li>Technologies: Spring Boot, Spring Cloud, Cloud Foundry, JUnit, Mockito, Swagger, RestDocs, Hibernate, Maven, Gradle, Flyway, Git, JIB, Docker, Kubernetes, Nexus, Kafka, RabbitMQ, Elasticsearch, Redis, REST, gRPC, Sonarqube</li>
+            </ul>
+            <hr>
+            <h3>Languages</h3>
+            <ul>
+                <li>Kazakh: native</li>
+                <li>English: Pre-intermediate</li>
+                <li>Russian: Advanced</li>
+            </ul>
+        </section>
 
-        const fontSize = 10;
-        const columns = canvas.width / fontSize;
-        const drops = [];
-        const speedFactors = [];
-        for (let i = 0; i < columns; i++) {
-            drops[i] = Math.random() * canvas.height / fontSize;
-            speedFactors[i] = Math.random() * 2 + 0.5;
-        }
+        <!-- Добавьте другие разделы, если есть -->
+    </main>
 
-        function drawMatrix() {
-            ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-            ctx.fillStyle = "#0F0";
-            ctx.font = `${fontSize}px arial`;
-
-            for (let i = 0; i < drops.length; i++) {
-                const text = charsArray[Math.floor(Math.random() * charsArray.length)];
-                ctx.fillText(text, i * fontSize, drops[i] * fontSize);
-
-                if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
-                    drops[i] = 0;
-                    speedFactors[i] = Math.random() * 2 + 0.5;
-                }
-
-                drops[i] += speedFactors[i];
-            }
-        }
-
-        function showOverlay() {
-            const overlay = document.getElementById("overlay");
-            overlay.style.display = "block";
-        }
-
-        const animationInterval = setInterval(drawMatrix, 50);
-
-        setTimeout(function() {
-            showOverlay();
-        }, 2000);
-    </script>
+    <footer>
+        <p>Contact: <a href="https://t.me/sab1tm">t.me/sab1tm</a> | <a href="mailto:sabit.murzaliev@gmail.com">sabit.murzaliev@gmail.com</a> | <a href="https://www.linkedin.com/in/sab1tm">linkedin.com/in/sab1tm</a></p>
+    </footer>
 </body>
 </html>
-
