--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
             <p>
                 Location: <strong>Astana, Kazakhstan</strong> <br>
                 Phone: <a href="tel:+77771271818">+7 (777) 127 18 18</a> <br>
-                Email: <a href="mailto:sabit.murzaliev@gmail.com">sabit.murzaliev@gmail.com</a> <br>
                 LinkedIn: <a href="https://www.linkedin.com/in/sab1tm">linkedin.com/in/sab1tm</a> <br>
                 Telegram: <a href="https://t.me/sab1tm">t.me/sab1tm</a>
             </p>
@@ -188,7 +187,7 @@
     </main>
 
     <footer>
-        <p>Contact: <a href="https://t.me/sab1tm">t.me/sab1tm</a> | <a href="mailto:sabit.murzaliev@gmail.com">sabit.murzaliev@gmail.com</a> | <a href="https://www.linkedin.com/in/sab1tm">linkedin.com/in/sab1tm</a></p>
+        <p>Contact: <a href="https://t.me/sab1tm">t.me/sab1tm</a> | <a href="https://www.linkedin.com/in/sab1tm">linkedin.com/in/sab1tm</a></p>
     </footer>
 </body>
 </html>
