--- a/index.html
+++ b/index.html
@@ -103,68 +103,42 @@
                 Java Back-end developer <br>
                 KKS-DIGITAL, LLC <br>
                 Astana, KZ <br>
-                Designed and developed a flexible system for automating business processes in the utilities sector. Implemented a flexible mechanism for routing business documents, ensuring efficient and dynamic processing of requests. Accelerated the decision-making process in favor of the end consumer. <br>
-                Languages and technologies: Java 11-17 / Spring Boot, Spring Cloud / JUnit / Mockito / Hibernate / PostgreSQL / Kafka / Elasticsearch / Redis / Feign Client / gRPC / Keycloak / Maven / Flyway / Jasper Reports / GitLab CI/CD / Docker / Nexus / Sonarqube
             </p>
-
             <p>
                 <strong>November 2021 – August 2023</strong> <br>
                 Java Back-end developer <br>
                 IT-holding KAZDREAM <br>
                 Astana, KZ <br>
-                Designed and developed a customized document flow system for inter-agency communication in the government
-                sector. Implemented a flexible document routing mechanism to allow for efficient and dynamic handling of
-                documents among multiple agencies. <br>
-                Utilized modern web development technologies to create a robust and user-friendly system for document exchange
-                and tracking. Implemented secure authentication and authorization mechanisms to ensure data privacy and
-                integrity. <br>
-                Languages and technologies: : Java 11 / Spring Framework (Boot, Security, Cloud, RestDocs) / JUnit / Mockito /
-                Hibernate / PostgreSQL / Apache Kafka / Elasticsearch / Redis / Feign Client / gRPC / oAuth2 / Maven /
-                Flyway / Jasper Reports / Jenkins / Docker (Compose) / Nexus / Sonarqube
             </p>
             <p>
                 <strong>May 2021 – November 2021</strong> <br>
                 Java Software Engineer <br>
                 Company ”NAT Kazakhstan” <br>
                 Astana, KZ <br>
-                Developed and maintained web applications to automate the organization’s business processes. <br>
-                Languages and technologies: Java 7-8 / Spring Framework (Boot, Security) / JUnit / Mockito / Hibernate / MySQL
-                / Feign Client / oAuth2 / Maven / Liquibase / Jasper Reports / Apache Tomcat
             </p>
             <p>
                 <strong>August 2019 – May 2021</strong> <br>
                 Java Software Engineer <br>
                 Company ”TALAP” <br>
                 Astana, KZ <br>
-                Deployment of several microservices of the same type in a cluster and development of a common reporting service. <br>
-                Languages and technologies: Java 8 / Spring Framework (Boot, Security) / JUnit / Mockito / Hibernate /
-                PostgreSQL / Feign Client / oAuth2 / Maven / Jasper Reports / Apache Tomcat
             </p>
             <p>
                 <strong>January 2019 – August 2021</strong> <br>
                 Software Engineer <br>
                 Company ”National Testing Center” <br>
                 Astana, KZ <br>
-                Developed and maintained web applications to automate the organization’s business processes. <br>
-                Languages and technologies: Java 8 / Spring Boot / Maven / Jasper Reports / Wildfly / JUnit / Hibernate / PostgreSQL / Mustache / HTML / CSS / JS
             </p>
             <p>
                 <strong>August 2012 – January 2019</strong> <br>
                 Head of Information Technology Department <br>
                 Company ”Kazakhmys Corp.” <br>
-                Astana, KZ <br>
-                IT department business process management. <br>
-                Department task planning. <br>
-                Project Execution Management. <br>
-                Solution of organizational issues. <br>
+                Balkhash, KZ <br>
             </p>
             <p>
                 <strong>May 2007 – August 2012</strong> <br>
-                Lead Software Engineer <br>
+                Software Engineer <br>
                 Company ”Kazakhmys Corp.” <br>
-                Astana, KZ <br>
-                Development of corporate applications for the company ”Kazakhmys Corp”. <br>
-                Languages and technologies: Application for Desktop (Windows OS) / Delphi XE / MS SQL / Visual FoxPro
+                Balkhash, KZ <br>
             </p>
 
             <hr>
