--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sabit's CV</title>
+    <title>Sabit M. (CV)</title>
     <style>
         body {
             font-family: 'Courier New', monospace;
