--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </main>
 
     <footer>
-        <p>Contact: <a href="https://t.me/sab1tm">t.me/sab1tm</a> | <a href="https://www.linkedin.com/in/sab1tm">linkedin.com/in/sab1tm</a></p>
+        @ <script>document.write(new Date().getFullYear())</script>
     </footer>
 </body>
 </html>
