--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </main>
 
     <footer>
-        @ <script>document.write(new Date().getFullYear())</script>
+        &copy; <script>document.write(new Date().getFullYear())</script>
     </footer>
 </body>
 </html>
