--- a/index.html
+++ b/index.html
@@ -2,163 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sabit M. (CV)</title>
-    <style>
-        body {
-            font-family: 'Courier New', monospace;
-            background-color: #2b2b2b;
-            color: #abb2bf;
-            margin: 0;
-            padding: 0;
-            font-size: 14pt;
-        }
-
-        header {
-            background-color: #2b2b2b;
-            color: #61afef;
-            padding: 10px 0;
-            text-align: center;
-        }
-
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-
-        nav ul li a {
-            color: #61afef;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        section {
-            margin-bottom: 20px;
-        }
-
-        footer {
-            background-color: #2b2b2b;
-            color: #abb2bf;
-            text-align: center;
-            padding: 10px 0;
-        }
-
-        h1, h2, h3, h4, h5, h6 {
-            color: #e5c07b;
-        }
-
-        hr {
-            border-color: #4b5263;
-        }
-
-        ul {
-            list-style-type: none;
-            padding-left: 0;
-        }
-
-        li {
-            margin-bottom: 10px;
-        }
-
-        a {
-            text-decoration: none;
-            color: #abb2bf;
-            font-weight: bold;
-        }
-    </style>
 </head>
 <body>
-    <header>
-        <h1>Sabit M.</h1>
-    </header>
-
-    <main>
-        <section id="cv">
-            <p>
-                Location: <strong>Astana, Kazakhstan</strong> <br>
-                LinkedIn: <a href="https://www.linkedin.com/in/sab1tm">linkedin.com/in/sab1tm</a> <br>
-                Telegram: <a href="https://t.me/sab1tm">t.me/sab1tm</a>
-            </p>
-            <hr>
-            <h3>Education</h3>
-            <p>
-                Kazakh-Russian University <br>
-                Bachelor of Arts in Computer Science <br>
-                Aug. 2002 -- May 2007
-            </p>
-            <hr>
-            <h3>Experience</h3>
-            <p>
-                <strong>August 2023 -- Present</strong> <br>
-                Java Back-end developer <br>
-                KKS-DIGITAL, LLC <br>
-                Astana, KZ <br>
-            </p>
-            <p>
-                <strong>November 2021 – August 2023</strong> <br>
-                Java Back-end developer <br>
-                IT-holding KAZDREAM <br>
-                Astana, KZ <br>
-            </p>
-            <p>
-                <strong>May 2021 – November 2021</strong> <br>
-                Java Software Engineer <br>
-                Company ”NAT Kazakhstan” <br>
-                Astana, KZ <br>
-            </p>
-            <p>
-                <strong>August 2019 – May 2021</strong> <br>
-                Java Software Engineer <br>
-                Company ”TALAP” <br>
-                Astana, KZ <br>
-            </p>
-            <p>
-                <strong>January 2019 – August 2021</strong> <br>
-                Software Engineer <br>
-                Company ”National Testing Center” <br>
-                Astana, KZ <br>
-            </p>
-            <p>
-                <strong>August 2012 – January 2019</strong> <br>
-                Head of Information Technology Department <br>
-                Company ”Kazakhmys Corp.” <br>
-                Balkhash, KZ <br>
-            </p>
-            <p>
-                <strong>May 2007 – August 2012</strong> <br>
-                Software Engineer <br>
-                Company ”Kazakhmys Corp.” <br>
-                Balkhash, KZ <br>
-            </p>
-
-            <hr>
-            <h3>Technical Skills</h3>
-            <ul>
-                <li>Languages: Java, Kotlin, Python, SQL/NoSQL</li>
-                <li>Technologies: Spring Boot, Spring Cloud, Cloud Foundry, JUnit, Mockito, Swagger, RestDocs, Hibernate, Maven, Gradle, Flyway, Git, JIB, Docker, Kubernetes, Nexus, Kafka, RabbitMQ, Elasticsearch, Redis, REST, gRPC, Sonarqube</li>
-            </ul>
-            <hr>
-            <h3>Languages</h3>
-            <ul>
-                <li>Kazakh: native</li>
-                <li>English: Pre-intermediate</li>
-                <li>Russian: Advanced</li>
-            </ul>
-        </section>
-    </main>
-
-    <footer>
-        &copy; <script>document.write(new Date().getFullYear())</script>
-    </footer>
+    Test GitHub Page
 </body>
 </html>
